--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,6 +19,7 @@
         </activity>
         <activity android:name=".MainActivity"></activity>
         <activity android:name=".TriangerActivity"></activity>
+        <activity android:name=".QueueExpandFragment"></activity>
     </application>
 
 </manifest>
