--- a/build.gradle
+++ b/build.gradle
@@ -3,9 +3,11 @@
 buildscript {
     repositories {
         jcenter()
+        //maven { url "https://oss.sonatype.org/content/repositories/snapshots"}
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:1.5.0'
+        //compile 'com.github.carlonzo.stikkyheader:core:0.0.3-SNAPSHOT'
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -15,6 +17,7 @@ buildscript {
 allprojects {
     repositories {
         jcenter()
+
     }
 }
 
