--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,15 +10,14 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".LoginActivity">
+        <activity android:name="com.f2016.dtu.androidventeliste.LoginActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".MainActivity"></activity>
-        <activity android:name=".TriangerActivity"></activity>
+        <activity android:name="com.f2016.dtu.androidventeliste.MainActivity"></activity>
+        <activity android:name="com.f2016.dtu.androidventeliste.TriangerActivity"></activity>
 
     </application>
 
